--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.marvec</groupId>
   <artifactId>pisnickar</artifactId>
   <packaging>jar</packaging>
-  <version>2.0</version>
+  <version>2.0-SNAPSHOT</version>
   <name>pisnickar - songs database</name>
     <build>
         <plugins>
