--- a/trunk/src/main/resources/org/marvec/pisnickar/panels/resources/SourcesPanel.properties
+++ b/trunk/src/main/resources/org/marvec/pisnickar/panels/resources/SourcesPanel.properties
@@ -1,5 +1,4 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
-jButton1.text=jButton1
+jButton1.text=Odebrat
 saveCloseButton.text=Ulo\u017Eit a zav\u0159\u00EDt
+jButton2.text=Upravit
+jButton3.text=P\u0159idat
