--- a/src/main/resources/org/marvec/pisnickar/resources/PisnickarView.properties
+++ b/src/main/resources/org/marvec/pisnickar/resources/PisnickarView.properties
@@ -39,3 +39,4 @@ searchMenuItem.text=Hledat...
 saveMenuItem.text=Ulo\u017Eit v\u0161e
 transferMenuItem.text=P\u0159enos mezi zdroji...
 welcomeMenuItem.text=\u00DAvodn\u00ED str\u00E1nka...
+printMenuItem.text=Tisk do PDF...
