--- a/trunk/src/main/resources/org/marvec/pisnickar/panels/resources/EditorPanel.properties
+++ b/trunk/src/main/resources/org/marvec/pisnickar/panels/resources/EditorPanel.properties
@@ -7,7 +7,7 @@ saveCloseButton.text=Ulo\u017Eit a zav\u0159\u00EDt
 cancelButton.text=Zru\u0161it
 saveShowButton.text=Ulo\u017Eit a zobrazit
 jLabel3.text=Hudba:
-jLabel4.text=Text:
+jLabel4.text=Slova:
 jLabel5.text=V\u00EDce zna\u010Dek odd\u011Blte \u010D\u00E1rkou.
 musicTextField.text=
 textTextField.text=
