--- a/trunk/src/main/resources/org/marvec/pisnickar/panels/resources/SourcesPanel.properties
+++ b/trunk/src/main/resources/org/marvec/pisnickar/panels/resources/SourcesPanel.properties
@@ -1,4 +1,4 @@
-jButton1.text=Odebrat
 saveCloseButton.text=Ulo\u017Eit a zav\u0159\u00EDt
-jButton2.text=Upravit
-jButton3.text=P\u0159idat
+removejButton.text=Odebrat
+editButton.text=Zak\u00E1zat/Povolit
+addButton.text=P\u0159idat
