--- a/src/main/resources/org/marvec/pisnickar/resources/PisnickarView.properties
+++ b/src/main/resources/org/marvec/pisnickar/resources/PisnickarView.properties
@@ -37,6 +37,10 @@ nextTabMenuItem.text=Dal\u0161\u00ED
 closeTabMenuItem.text=Zav\u0159\u00EDt
 searchMenuItem.text=Hledat...
 saveMenuItem.text=Ulo\u017Eit v\u0161e
-transferMenuItem.text=P\u0159enos mezi zdroji...
 welcomeMenuItem.text=\u00DAvodn\u00ED str\u00E1nka...
 printMenuItem.text=Tisk do PDF...
+registerMenuItem.text=Registrace...
+selectionMenu.text=V\u00FDb\u011Br
+showSelectionMenuItem.text=Zobrazit v\u00FDb\u011Br
+clearSelectionMenuItem.text=Vy\u010Distit v\u00FDb\u011Br
+saveSelectionMenuItem.text=Ulo\u017Eit v\u00FDb\u011Br do zdroje...
