--- a/src/main/resources/org/marvec/pisnickar/dialogs/resources/NewSourceDialog.properties
+++ b/src/main/resources/org/marvec/pisnickar/dialogs/resources/NewSourceDialog.properties
@@ -8,3 +8,4 @@ jPanel1.TabConstraints.tabTitle=Souborov\u00FD zdroj
 jPanel2.TabConstraints.tabTitle=Internetov\u00FD zdroj
 jLabel2.text=Vyberte server:
 serverDefaultRadioButton.text=V\u00FDchoz\u00ED server P\u00EDsni\u010Dk\u00E1\u0159e
+jTextArea1.text=Internetov\u00FD zdroj vy\u017Eaduje dostupnost dan\u00E9ho serveru na internetu. V p\u0159\u00EDpad\u011B, \u017Ee bude zdroj nedostupn\u00FD, dojde k jeho automatick\u00E9mu zak\u00E1z\u00E1n\u00ED. Pr\u00E1ce s internetov\u00FDm zdrojem m\u016F\u017Ee b\u00FDt pomalej\u0161\u00ED ne\u017E s lok\u00E1ln\u00EDm souborem, proto se m\u016F\u017Ee st\u00E1t, \u017Ee aplikace bude m\u00EDt del\u0161\u00ED odezvy.
